# eneo

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  compose.yml  docker-compose.e2e.ci.yml  docker-compose.e2e.yml  vllm.md
backend/: .env.template  .pyright-baseline.json  Dockerfile  README.md  check_icon_columns.py  init_db.py  pyproject.toml  pyrightconfig.json  pytest.ini  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 000000000000_2cfd433ebbed_add_api_key_to_users_indexed.py  000000000000_6ac6f2cbf0b6_change_session.py  000000000000_a244a4aa2d8c_create_groups.py  000000000000_a9713bb4941e_add_beta_keys_table.py  000000000000_e0e55673e20a_create_main_tables.py  000000000000_e93839166d18_add_settings_table.py  1d60c8c457d3_add_reasoning_column_to_questions.py  202503060954_7c492266359d_shorten_confluence_integration__.py  202503141310_b127c46c7ebc_rename_confluence_table_.py  202602041600_add_api_keys_v2.py  202602061000_add_resource_permissions.py  202602131000_seed_api_key_expiry_notifications_flag.py  20260303_split_token_limit_into_input_output.py  20260310_add_security_classification_to_mcp_servers.py  20260318_add_icon_id_to_group_chats.py  20260319_add_nickname_to_embedding_models.py  20260324_unify_roles_system.py  20260401_fix_migration_history_cascade.py  20260402_model_lifecycle_fields.py  20260403_add_migration_history_provider_types.py  202604091000_remove_scope_enforcement_flags.py  202604101000_backfill_sk_resource_permissions.py  202604221200_add_usergroups_users_group_index.py  202604231400_drop_usergroups_users_group_index.py  202604271000_unique_default_assistant_per_space.py  202604281200_grant_api_keys_permission_to_owner.py  202604291030_add_completion_model_kwargs_capabilities.py  20260430_add_model_costs.py  20260501_backfill_model_costs.py  202605061100_sessions_nullable_user_id_add_api_key_id.py  202605171000_add_chat_session_mcp_state.py  202605201000_add_mcp_tool_references.py  202605211000_add_users_is_system_user.py  202605211100_create_org_space_assistant_roles.py  202605211200_create_help_assistant_assignment_history.py  202605211300_create_help_assistant_runs.py  202605211400_ensure_help_assistant_infrastructure.py  202605211500_create_prompt_library.py  202605211600_create_governance_policy.py  202605221000_governance_policy_providers.py  (+21 more)
backend/docs/: PYRIGHT_HARDENING_HANDOFF.md  TYPE_CHECKING.md
backend/docs/api/: error-handling.md
backend/scripts/: migrate_env_oidc_to_tenant_federation.py  run_pyright_in_devcontainer.sh  seed_global_models_for_migration_test.py  test_api_key_regression.py
backend/src/eneo/actors/: __init__.py  actor_factory.py  actor_manager.py
backend/src/eneo/admin/: admin_models.py  admin_router.py  admin_service.py  quota_factory.py  quota_service.py
backend/src/eneo/ai_models/: ai_model.py  (+4 more)
backend/tests/: conftest.py  fixtures.py  test_settings_override.py  warning_filters.py
backend/tests/integration/: conftest.py  test_api_key_access_matrix.py  test_api_key_auto_follow_publish.py  test_api_key_create_authorization.py  test_api_key_cross_scope_writes.py  test_api_key_endpoints.py  test_api_key_expiring_soon.py  test_api_key_governance_isolation.py  test_api_key_scope_integration.py  test_api_key_service_keys.py  test_api_key_tenant_isolation.py  test_crawl_feeder.py  test_crawl_heartbeat_e2e.py  test_crawl_scheduler_dedupe.py  test_crawler_retry_behavior.py  test_crawler_timeout_enforcement.py  test_data_retention_hierarchical.py  test_feeder_failure_modes.py  test_health.py  test_knowledge_distribution.py  test_knowledge_permissions.py  test_knowledge_retrieval.py  test_multi_tenant_authentication_e2e.py  test_multi_tenant_data_isolation_adversarial.py  test_multi_tenant_encryption_key_rotation.py  test_multi_tenant_federation_chaos_e2e.py  test_multi_tenant_federation_e2e.py  test_multi_tenant_llm_credentials_runtime.py  test_multi_tenant_worker_concurrency_e2e.py  test_optimistic_acquire.py  test_organization_knowledge_e2e.py  test_organization_space.py  test_orphan_cleanup.py  test_otel_error_responses.py  test_otel_instrumentation.py  test_phase0_zombie_reconciliation.py  test_service_key_endpoint_gates.py  test_session_scope_architecture.py  test_settings_execution_integration.py  test_slot_leak_fixes.py  (+11 more)
backend/tests/unit/: api_key_test_utils.py  test_api_key_auth_guards.py  test_api_key_contract_matrix.py  test_api_key_create_scope_validation.py  test_api_key_lifecycle_service.py  test_api_key_lifecycle_service_ownership.py  test_api_key_maintenance_service.py  test_api_key_notification_auto_follow.py  test_api_key_openapi_contract.py  test_api_key_policy_service.py  test_api_key_policy_service_ownership.py  test_api_key_property.py  test_api_key_rate_limiter.py  test_api_key_resolver.py  test_api_key_route_coverage.py  test_api_key_router_pagination.py  test_api_key_scope_enforcement.py  test_api_key_scope_revoker.py  test_api_key_scope_revoker_ownership.py  test_api_key_state_machine.py  test_assistant_mcp_validation.py  test_assistant_protocol.py  test_audit_async.py  test_audit_bugs.py  test_audit_category_mappings.py  test_audit_config_service.py  test_audit_domain.py  test_audit_export_service.py  test_audit_metadata_schema.py  test_audit_service.py  test_audit_session_service.py  test_chat_stream_abort_persistence.py  test_completion_model_kwargs_capabilities.py  test_completion_service_mcp_disabled.py  test_completion_service_streaming.py  test_conversation_request_validation.py  test_conversations_tool_approval_contract.py  test_csv_injection.py  test_endpoint_audit_verification.py  test_error_contract_consistency.py  (+20 more)
backend/tests/unittests/: conftest.py  test_exceptions.py
backend/tests/validation/: test_litellm_api_key_override.py
backend/typings/: audioread.pyi  soundfile.pyi
backend/typings/pandas/: __init__.pyi
backend/typings/pgvector/: sqlalchemy.pyi
backend/typings/scrapy/: __init__.pyi  crawler.pyi  http.pyi  linkextractors.pyi  spiders.pyi
backend/typings/tavily/: __init__.pyi
backend/typings/wrapt/: __init__.pyi
(+2313 files in other folders)
